[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dbos-crewai"
version = "0.1.0"
description = "CrewAI DBOS durable agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crewai>=1.2.1",
    "dbos>=2.3.0",
]

[tool.hatch.build]
packages = ["dbos_crewai"]

[tool.hatch.build.targets.wheel]
only-include = ["/README.md"]

[tool.hatch.build.targets.sdist]
include = ["/README.md", "/tests"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-vcr>=1.0.2",
    "ruff>=0.14.2",
]
